# Haskell

./: README.md
01_basic_func/: merge_sort.hs  sum_all.hs  zip_n.hs
02_structures/: Bst.hs  Equipment.hs  game.hs  pst.hs  strip.hs
03_monoids/: BstMerge.hs  Coins.hs  Map.hs  Set.hs
04_monads/: Lca.hs  MonadJoinFish.hs  State.hs  ZeroInMin.hs
05_applicative/: InstanceEither.hs  InstanceIdentity.hs  InstancePair.hs  Parser.hs  ParserSExpr.hs  TestEmployeeParser.hs  TestParser.hs  UsefulParsers.hs
05_applicative/ParserHw/: ParserHw.cabal
05_applicative/ParserHw/.stack-work/install/x86_64-linux/lts-6.23/7.10.3/flag-cache/: ParserHw-0.1.0.0-632c1aafaf1b8399abbded2b4589d892
05_applicative/ParserHw/.stack-work/install/x86_64-linux/lts-6.23/7.10.3/lib/x86_64-linux-ghc-7.10.3/ParserHw-0.1.0.0-8jvQSOrf1Ae9tCV8prCCeR/: ParserSExpr.dyn_hi
05_applicative/ParserHw/.stack-work/install/x86_64-linux/lts-6.23/7.10.3/pkgdb/: ParserHw-0.1.0.0-632c1aafaf1b8399abbded2b4589d892.conf  package.cache
05_applicative/ParserHw/app/: Main.hs
05_applicative/ParserHw/src/: InstanceConst.hs  InstanceTree.hs  ParserSExpr.hs  TestEmployeeParser.hs  TestParser.hs
06_wr_st_monads/: Expr.hs  Moving.hs  OS.hs  Tree.hs
07_IO/: LICENSE  config.txt  hw7.cabal
07_IO/src/: Main.hs  Parser.hs  UsefulParsers.hs  stack.yam  temp.cabal
08_Transf/: hw8.cabal
08_Transf/src/: Hw1.hs  Hw2.hs  Main.hs  Transformers.hs
test1/: A.hs
test2/: stack.yaml
test2/src/: Floyd.hs
test2/test2/: test2.cabal
test2/test3/src/: SafeHead.hs
