name:                hw7
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/jon536/hw7#readme
license:             BSD3
license-file:        LICENSE
author:              Eugene
maintainer:          n.eugene536@gmail.com
copyright:           2016
category:            Haskell-hw
build-type:          Simple
cabal-version:       >=1.10

executable hw7
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5,
                    containers,
                    split,
                    text
