
name:                hw7
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/jon536/hw7#readme
license:             BSD3
license-file:        LICENSE
author:              Eugene
maintainer:          n.eugene536@gmail.com
copyright:           2016
category:            Haskell-hw
build-type:          Simple
cabal-version:       >=1.10

--library
    --hs-source-dirs:      src
    --exposed-modules:     Main
    --build-depends:       base >= 4.7 && < 5
                       --, split
                       --, containers
    --other-modules:       Parser
                       --, UsefulParsers
    --default-language:    Haskell2010

executable hw7
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       split,
                       containers,
                       hw7
  other-modules:       Parser
                     , UsefulParsers
